--- a/tests/Makefile
+++ b/tests/Makefile
@@ -8,6 +8,11 @@ ht_test:
 	gcc -I ../include/ -L ../lib/ -Wl,-rpath,../lib/ ./ht_table_test.c ../src/record.c ../src/ht_table.c -lbf -o ./ht_table_test -O2
 	./ht_table_test
 
+hp_test:
+	@echo " Compile hp_main ...";
+	gcc -I ../include/ -L ../lib/ -Wl,-rpath,../lib/ ./hp_test.c ../src/record.c ../src/hp_file.c -lbf -o ./hp_test -O2
+	./hp_test
+
 val_sht_test:
 	gcc -I ../include/ -L ../lib/ -Wl,-rpath,../lib/ ./sht_table_test.c ../src/record.c ../src/sht_table.c ../src/ht_table.c -lbf -o ./sht_table_test -O2
 	valgrind --leak-check=full --show-leak-kinds=all --track-origins=yes ./sht_table_test
@@ -16,6 +21,11 @@ val_ht_test:
 	gcc -I ../include/ -L ../lib/ -Wl,-rpath,../lib/ ./ht_table_test.c ../src/record.c ../src/ht_table.c -lbf -o ./ht_table_test -O2
 	valgrind --leak-check=full --show-leak-kinds=all --track-origins=yes ./ht_table_test
 
+val_hp_test:
+	@echo " Compile hp_main ...";
+	gcc -I ../include/ -L ../lib/ -Wl,-rpath,../lib/ ./hp_test.c ../src/record.c ../src/hp_file.c -lbf -o ./hp_test -O2
+	valgrind --leak-check=full --show-leak-kinds=all --track-origins=yes ./hp_test
+
 clean_sht:
 	rm sht_table_test
 	rm index.db
@@ -23,4 +33,8 @@ clean_sht:
 
 clean_ht:
 	rm ht_table_test
+	rm data.db
+
+clean_hp:
+	rm hp_test
 	rm data.db
